--- a/client/src/app/modules/home/home-page/home-page.component.html
+++ b/client/src/app/modules/home/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container" id="homeContainer">
   <ng-container *ngIf="highestRatedRecipes.length">
-    <app-slider [highestRatedRecipes]="highestRatedRecipes"></app-slider>
+    <app-slider [sliderRecipes]="highestRatedRecipes"></app-slider>
   </ng-container>
   <!-- Place for tags -->
   <app-tags></app-tags>
