--- a/client/src/styles/base/_utilities.scss
+++ b/client/src/styles/base/_utilities.scss
@@ -7,7 +7,7 @@
     $direction: column,
     $justify: center,
     $align: center,
-    $textAlign: center
+    $text-align: center
   );
   padding: 1rem;
   flex: 1;
