--- a/client/src/styles/base/_utilities.scss
+++ b/client/src/styles/base/_utilities.scss
@@ -122,7 +122,7 @@
 
 @media (min-width: 992px) {
   .upload-btn-wrapper,
-  .cancelBtn {
+  .btn-cancel {
     width: 120px;
     padding: 0.4rem;
     font-size: 0.9rem;
