--- a/client/src/app/modules/auth/login/login.component.html
+++ b/client/src/app/modules/auth/login/login.component.html
@@ -1,23 +1,30 @@
 <div class="form-wrapper container">
-  <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" class="flex pd1" enctype="multipart/form-data" >
+  <form
+    #authForm="ngForm"
+    (ngSubmit)="onSubmit(authForm)"
+    class="flex pd1"
+    enctype="multipart/form-data"
+  >
     <div class="form-header flex mgb1">
-      <h1 class="mgb1">Login</h1>
+      <h1 class="mgb1">{{ !isRegisterState ? "Login" : "Sign Up" }}</h1>
       <p>
-        Dont'have an account?&nbsp;
-        <!-- <span class="signup-link">Sign Up</span> -->
-        <!--<a href="auth/signup" class="signup-link">Sign Up</a>-->
-        <a
-          routerLink="../signup"
+        {{
+          isRegisterState
+            ? "Already have an account?"
+            : "Don't have an account?"
+        }}
+        &nbsp;
+        <input
+          type="button"
+          [value]="isRegisterState ? 'Login' : 'Sign Up'"
+          (click)="toggleRegisterState()"
           class="signup-link"
-          >Sign Up</a>
+        />
       </p>
     </div>
-    <div class="form-group flex flexCenter mgb1">
+    <div class="form-group flex flex-center mgb1">
       <div class="label-wrapper">
-          <fa-icon
-          [icon]="['fas', 'user']"
-          class="user-icons"
-          ></fa-icon>
+        <fa-icon [icon]="['fas', 'user']" class="user-icons"></fa-icon>
         <input
           type="text"
           id="username"
@@ -29,34 +36,32 @@
           #usernameControl="ngModel"
         />
         <label for="username">Username</label>
-        <span class="tooltip-container"
-          >
+        <span class="tooltip-container">
           <fa-icon
-          [icon]="['fas', 'info-circle']"
-          class="user-icons infoIcon"
-        ></fa-icon>
-        <app-tooltip tooltipText="Enter 6-15 characters, allowed: A-Z a-z 0-9 _ - . @"></app-tooltip>
-          </span>
+            [icon]="['fas', 'info-circle']"
+            class="user-icons infoIcon"
+          ></fa-icon>
+          <app-tooltip
+            tooltipText="Enter 6-15 characters, allowed: A-Z a-z 0-9 _ - . @"
+          ></app-tooltip>
+        </span>
       </div>
       <ng-container *ngIf="usernameControl.invalid && usernameControl.touched">
-        <p class="error input-error" *ngIf="usernameControl.errors?.required">Username is required</p>
+        <p class="error input-error" *ngIf="usernameControl.errors?.required">
+          Username is required
+        </p>
         <p class="error input-error" *ngIf="usernameControl.errors?.pattern">
-        Please enter valid username, check
-        <span class="tooltip-container"
-          ><fa-icon
-          [icon]="['fas', 'info-circle']"
-          class="infoIcon"
-        ></fa-icon></span>
-        for details
+          Please enter valid username, check
+          <span class="tooltip-container"
+            ><fa-icon [icon]="['fas', 'info-circle']" class="infoIcon"></fa-icon
+          ></span>
+          for details
         </p>
       </ng-container>
     </div>
-    <div class="form-group flex flexCenter mgb1">
+    <div class="form-group flex flex-center mgb1">
       <div class="label-wrapper">
-        <fa-icon
-          [icon]="['fas', 'lock']"
-          class="user-icons infoIcon"
-        ></fa-icon>
+        <fa-icon [icon]="['fas', 'lock']" class="user-icons infoIcon"></fa-icon>
         <input
           [(ngModel)]="password"
           type="password"
@@ -68,29 +73,55 @@
           #passwordControl="ngModel"
         />
         <label for="password">Password</label>
-        <span class="tooltip-container"
-          >
-          <fa-icon
-          [icon]="['fas', 'info-circle']"
-          class="infoIcon"
-        ></fa-icon>
-        <app-tooltip tooltipText="Minimum 6 characters required"></app-tooltip>
-          </span>
+        <span class="tooltip-container">
+          <fa-icon [icon]="['fas', 'info-circle']" class="infoIcon"></fa-icon>
+          <app-tooltip
+            tooltipText="Minimum 6 characters required"
+          ></app-tooltip>
+        </span>
       </div>
       <ng-container *ngIf="passwordControl.invalid && passwordControl.touched">
-        <p class="error input-error">
-          Please enter minimum 6 characters
-        </p>
+        <p class="error input-error">Please enter minimum 6 characters</p>
       </ng-container>
     </div>
-    
+
+    <!-- signup options --><ng-container *ngIf="isRegisterState">
+      <div class="form-group flex flex-center upload-section">
+        <h4 class="block mgb1">Upload profile image</h4>
+        <div class="upload flex">
+          <div class="buttons flex">
+            <label for="image" class="upload-btn-wrapper hover-effect">
+              <input type="file" id="image" />
+              Browse image
+            </label>
+            <button class="btn-cancel hover-effect">Cancel image</button>
+          </div>
+          <!-- <figure class="flex">
+          <img :src="preview" alt="preview" class="img-fit" />
+        </figure> -->
+        </div>
+        <div class="small">
+          <!-- <small class="selected block">{{ filename }}</small> -->
+          <small class="block">File formats accepted: jpg/jpeg/png/gif</small>
+          <small>Maximum upload file size 2Mb</small>
+        </div>
+      </div>
+    </ng-container>
+    <!-- end signup options -->
+
     <div
-      [ngClass]="errorMessage ? 'message-wrapper flex flex-center message-background' : 'message-wrapper center'"
+      [ngClass]="
+        errorMessage
+          ? 'message-wrapper flex flex-center message-background'
+          : 'message-wrapper center'
+      "
     >
       <ng-container *ngIf="errorMessage">
-        <app-info-message [message]="errorMessage" (clear)="onClear('')"></app-info-message>
+        <app-info-message
+          [message]="errorMessage"
+          (clear)="onClear('')"
+        ></app-info-message>
       </ng-container>
-      
     </div>
     <ng-container *ngIf="isLoading">
       <app-loader [bigLoader]="false"></app-loader>
@@ -98,9 +129,9 @@
     <button
       type="submit"
       class="btn-action login-btn"
-      [disabled]="loginForm.invalid"
+      [disabled]="authForm.invalid"
     >
-      Login
+      {{ isRegisterState ? "Create Account" : "Login" }}
     </button>
   </form>
 </div>
