--- a/client/src/app/modules/results/results-home/results-home.component.html
+++ b/client/src/app/modules/results/results-home/results-home.component.html
@@ -13,6 +13,7 @@
             @sortDateAsc="sortDateAscending(results)"
             @sortDateDesc="sortDateDescending(results)"
           /> -->
+      <app-sorting-buttons></app-sorting-buttons>
       <div class="successful flex">
         <app-query-recipe
           *ngFor="let result of queryResults"
