--- a/client/src/app/modules/user/saved-recipes/saved-recipes.component.html
+++ b/client/src/app/modules/user/saved-recipes/saved-recipes.component.html
@@ -1,1 +1,28 @@
-<p>saved-recipes works!</p>
+<div class="saved-recipes flex">
+  <h1 class="mg2">Saved recipes</h1>
+  <app-loader [bigLoader]="true" *ngIf="isLoading"></app-loader>
+
+  <app-page-error
+    *ngIf="!user.favorites.length"
+    message="You haven't saved any recipes yet"
+  ></app-page-error>
+  <div class="list-container flex flex-center" *ngIf="savedRecipes.length">
+    <!-- <SortingButtons
+        @sortTitleAsc="sortTitleAscending(savedRecipes)"
+        @sortTitleDesc="sortTitleDescending(savedRecipes)"
+        @sortRatingAsc="sortRatingAscending(savedRecipes)"
+        @sortRatingDesc="sortRatingDescending(savedRecipes)"
+        @sortDateAsc="sortDateAscending(savedRecipes)"
+        @sortDateDesc="sortDateDescending(savedRecipes)"
+      /> -->
+    <app-sorting-buttons></app-sorting-buttons>
+
+    <app-private-recipe
+      [recipe]="recipe"
+      [isUsersRecipes]="false"
+      *ngFor="let recipe of savedRecipes"
+      class="render-recipes sorting-item"
+      (deletedFromFavorites)="currentUserFavorites()"
+    ></app-private-recipe>
+  </div>
+</div>
