search form finished, create form start

--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -18,9 +18,10 @@
       Tasty</a
     >
     <button
+    *ngIf="showSearchBtn"
       class="header-search"
       aria-label="search for recipes"
-      (click)="getUserData()"
+      (click)="toggleSearch()"
     >
       <span class="search">
         <fa-icon [icon]="['fas', 'search']"></fa-icon>
