--- a/client/src/app/modules/shared/components/search/search.component.html
+++ b/client/src/app/modules/shared/components/search/search.component.html
@@ -35,7 +35,7 @@
   <form
     class="optional-form mg1"
     #categoriesForm="ngForm"
-    (ngSubmit)="basicSearch(categoriesForm)"
+    (ngSubmit)="categoriesSearch(categoriesForm)"
   >
     <h3 class="pd1">Search By Categories</h3>
     <div class="dish-types">
