--- a/client/src/app/modules/user/create-recipe/create-recipe.component.html
+++ b/client/src/app/modules/user/create-recipe/create-recipe.component.html
@@ -1,1 +1,8 @@
-<p>create-recipe works!</p>
+<div class="create-recipe flex flex-center">
+    <h1 id="create-recipe-heading" class="mg2">
+      Create Recipe
+    </h1>
+    <div class="form-wrapper mgb1">
+      <app-recipe-form></app-recipe-form>
+    </div>
+  </div>
