--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -4,20 +4,19 @@
   "./base/reset", "./base/typography", "./base/utilities", "./base/keyframes",
   "./components/buttons";
 
+.star-icon {
+  @include fonts($color: $star-color, $size: 0.9rem);
+}
 
-  .star-icon {
-    @include fonts($color: $star-color, $size: 0.9rem);
-  }
-  
-  .star-entity {
-    @include fonts($color: $star-color, $size: 1.5rem);
-    margin-left: 0.3rem;
-  }
-  
-  .hash-link {
-    @include fonts($color: rgb(49, 117, 108), $size: 1.1rem);
-    margin: 2rem 0;
-  }
+.star-entity {
+  @include fonts($color: $star-color, $size: 1.5rem);
+  margin-left: 0.3rem;
+}
+
+.hash-link {
+  @include fonts($color: rgb(49, 117, 108), $size: 1.1rem);
+  margin: 2rem 0;
+}
 
 // checkboxes (home page form, create/edit recipe form)
 .check-boxes {
@@ -62,6 +61,29 @@
     input:checked ~ span {
       background-color: rgba(74, 143, 74, 0.979);
     }
+  }
+}
+
+// select
+
+.select-box {
+  position: relative;
+  @include box-size($min-width: 260px, $max-width: 300px, $height: 2rem);
+  @include alignment($text-align: left);
+  line-height: 2rem;
+  @include fonts($color: $light);
+
+  select {
+    @include box-size($height: 2rem, $width: 100%);
+    background: $darkSteel;
+    border-radius: 6px;
+    padding-left: 0.5rem;
+    cursor: pointer;
+    color: $light;
+  }
+
+  select option {
+    color: $graphite;
   }
 }
 
