--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -9,6 +9,7 @@ $star-color: rgba(236, 214, 13, 0.973);
 // gradients
 $greenGradient: linear-gradient(to top, #097e4b 0%, #189751 100%);
 $orangeGradient: linear-gradient(0deg, #d88b5e 0%, #f5cd6a 100%);
+$lightOrange: linear-gradient(0deg, #eacda3, #d6ae7b);
 $blueGradient: linear-gradient(180deg, #387cb4 0%, #21597e 100%);
 $blueGreenGradient:linear-gradient(to right, #34e89e, #0f3443);
 $darkSteel: linear-gradient(0deg, #1f2931, #959490);
