create form & image upload

--- a/client/src/app/modules/shared/components/recipe-form/recipe-form.component.html
+++ b/client/src/app/modules/shared/components/recipe-form/recipe-form.component.html
@@ -27,7 +27,7 @@
       <!-- description -->
       <label for="intro"><span class="required">*</span> Description</label>
       <textarea
-        formControlName="mealName"
+        formControlName="intro"
         id="intro"
         required
         placeholder="Description, 4-150 characters"
@@ -48,28 +48,34 @@
       <!-- select options -->
       <label for="dishType"><span class="required">*</span> Dish Type</label>
       <div class="select-box mgb1">
-        <select name="dishType" class="categories">
-          <option value="">Any category</option>
+        <select formControlName="dishType" class="categories">
+          <option value="">Select dish type</option>
           <option
             *ngFor="let option of dishTypeOptions"
-            [value]="option.toLowerCase()"
+            [ngValue]="option.toLowerCase()"
           >
             {{ option }}
           </option>
         </select>
       </div>
       <div class="warn-wrapper">
-        <!-- <p class="warn" v-show="!dishTypeWarn">
-            Please select dish type from menu!
-          </p> -->
+        <p
+          class="warn"
+          *ngIf="
+            recipeForm.controls.dishType.touched &&
+            recipeForm.controls.dishType.errors
+          "
+        >
+          Please select dish type!
+        </p>
       </div>
       <label for="level">Difficulty</label>
       <div class="select-box mgb1">
-        <select name="difficulty" class="categories">
-          <option value="">Any category</option>
+        <select formControlName="level" class="categories">
+          <option value="">Select difficulty level</option>
           <option
             *ngFor="let option of difficultyOptions"
-            [value]="option.toLowerCase()"
+            [ngValue]="option.toLowerCase()"
           >
             {{ option }}
           </option>
@@ -80,43 +86,55 @@
         ><span class="required">*</span> Preparation Time (in minutes)</label
       >
       <div class="number-wrapper flex">
-        <button
-          type="button"
-          class="plus-minus"
-          (click)="timing > 1 ? (timing = timing - 1) : (timing = 1)"
-        >
+        <button type="button" class="plus-minus" (click)="decreaseTiming()">
           <fa-icon [icon]="['fas', 'minus']"></fa-icon>
         </button>
-        <input type="number" min="1" id="timing" />
-        <button type="button" class="plus-minus" (click)="timing = timing + 1">
+        <input
+          type="number"
+          id="timing"
+          name="timing"
+          formControlName="timing"
+          required
+        />
+        <button type="button" class="plus-minus" (click)="increaseTiming()">
           <fa-icon [icon]="['fas', 'plus']"></fa-icon>
         </button>
       </div>
+
       <div class="warn-wrapper">
-        <!-- <p class="warn" v-show="!timingWarn">
-            Minutes (number) is required!
-          </p> -->
+        <p
+          class="warn"
+          *ngIf="
+            recipeForm.controls.timing.touched &&
+            recipeForm.controls.timing.errors
+          "
+        >
+          Preparation time: time in minutes required!
+        </p>
       </div>
       <!-- persons -->
       <label for="persons"
         ><span class="required">*</span> Number of persons</label
       >
       <div class="number-wrapper flex">
-        <button
-          class="plus-minus"
-          (click)="persons > 1 ? (persons = persons - 1) : (persons = 1)"
-        >
+        <button type="button" class="plus-minus" (click)="decreasePersons()">
           <fa-icon [icon]="['fas', 'minus']"></fa-icon>
         </button>
-        <input type="number" min="1" id="persons" required />
-        <button class="plus-minus" (click)="persons = persons + 1">
+        <input type="number" id="persons" required formControlName="persons" />
+        <button type="button" class="plus-minus" (click)="increasePersons()">
           <fa-icon [icon]="['fas', 'plus']"></fa-icon>
         </button>
       </div>
       <div class="warn-wrapper">
-        <!-- <p class="warn" v-show="!personsWarn">
-            Number of persons is required!
-          </p> -->
+        <p
+          class="warn"
+          *ngIf="
+            recipeForm.controls.persons.touched &&
+            recipeForm.controls.persons.errors
+          "
+        >
+          Number of persons is required!
+        </p>
       </div>
       <!-- regional -->
       <label for="regional">Regional</label>
@@ -125,17 +143,12 @@
       <div class="check-boxes flex">
         <label for="vegetarian" class="block"
           >Vegetarian
-          <input
-            type="checkbox"
-            id="vegetarian"
-            name="vegetarian"
-            value="vegetarian"
-          />
+          <input type="checkbox" id="vegetarian" formControlName="vegetarian" />
           <span tabindex="0"></span>
         </label>
         <label for="gluten" class="block"
           >Gluten Free
-          <input type="checkbox" id="gluten" name="gluten" value="gluten" />
+          <input type="checkbox" id="gluten" formControlName="glutenFree" />
           <span tabindex="0"></span>
         </label>
       </div>
@@ -155,28 +168,32 @@
           />
           <figcaption>Image preview: {{ filename }}</figcaption>
         </figure>
-        <!-- <figure
-            
-            class="flex flex-center"
-          >
-            <img
-              src="getSingleRecipe.image.url"
-              :alt="getSingleRecipe.mealName"
-              loading="lazy"
-            />
-            <figcaption>Current image</figcaption>
-          </figure> -->
-        <!-- <p v-if="getEditState && getSingleRecipe.image === undefined">
-            No current image
-          </p> -->
+        <figure
+          *ngIf="uiService.editState && singleRecipe.image"
+          class="flex flex-center"
+        >
+          <img
+            [src]="singleRecipe.image.url"
+            [alt]="singleRecipe.mealName"
+            loading="lazy"
+          />
+          <figcaption>Current image</figcaption>
+        </figure>
+        <p *ngIf="uiService.editState && singleRecipe.image === undefined">
+          No current image
+        </p>
       </div>
       <h4 class="block mgt1">Select recipe image</h4>
       <label for="recipeImage" class="upload-btn-wrapper hover-effect">
         <input type="file" id="recipeImage-w" (change)="uploadFile($event)" />
         Browse image
       </label>
-      <button class="remove hover-effect">
-        <!--           v-if="preview" @click.prevent="removeSelectedImage"-->
+      <button
+        type="button"
+        class="remove hover-effect"
+        *ngIf="preview"
+        (click)="removeSelectedImage()"
+      >
         Cancel
       </button>
       <div class="small">
@@ -192,11 +209,12 @@
   <fieldset class="ingredients mgb1">
     <legend>Ingredients</legend>
     <div class="inner center">
-      <!-- <transition-group name="scale-in-tl" tag="ul"> -->
-      <ul>
+      <!-- <transition-group name="scale-in-tl"> -->
+      <ul formArrayName="ingredients">
         <li
           class="single-ingredient"
-          *ngFor="let ingred of ingredients; let i = index"
+          *ngFor="let ingred of ingredientsControls; let i = index"
+          [formGroupName]="i"
         >
           <label [for]="'ingred' + i"
             ><span class="required">*</span> Ingredient</label
@@ -206,38 +224,45 @@
             placeholder="Enter ingredient"
             required
             [id]="'ingred' + i"
+            formControlName="ingredient"
           />
-          <label [for]="'amount' + i">Amount</label>
+          <div class="warn-wrapper">
+            <p class="warn" *ngIf="recipeForm.controls.ingredients.invalid">
+              Ingredient field is required!
+            </p>
+          </div>
+          <label [for]="'amount' + i"> Amount</label>
           <input
             type="text"
             [id]="'amount' + i"
             placeholder="Enter amount of this ingredient"
+            formControlName="amount"
           />
           <button
+            type="button"
             class="remove mgt1 tooltip-container"
-            [disabled]="ingredients.length === 1"
+            [disabled]="ingredientsControls.length === 1"
             (click)="removeIngredient(i)"
           >
             Remove
             <fa-icon [icon]="['fas', 'minus']"></fa-icon>
             <app-tooltip
               tooltipText="Remove this ingredient"
-              *ngIf="ingredients.length !== 1"
+              *ngIf="ingredientsControls.length !== 1"
             ></app-tooltip>
           </button>
         </li>
       </ul>
       <!-- </transition-group> -->
-      <button class="mgt1 add tooltip-container" (click)="addIngredient()">
+      <button
+        class="mgt1 add tooltip-container"
+        type="button"
+        (click)="addIngredient()"
+      >
         Add
         <fa-icon [icon]="['fas', 'plus']" class="icons"></fa-icon>
         <app-tooltip tooltipText="Add new ingredient"></app-tooltip>
       </button>
-      <div class="warn-wrapper">
-        <!-- <p class="warn" v-show="!ingredientsWarn">
-            At least one ingredient entry is required!
-          </p> -->
-      </div>
     </div>
   </fieldset>
   <!-- steps -->
@@ -245,18 +270,29 @@
     <legend>Preparation steps</legend>
     <div class="inner center">
       <!-- <transition-group name="scale-in-tl" tag="ul"> -->
-      <ul>
-        <li class="single-step" *ngFor="let st of steps; let i = index">
-          <label [for]="'step' + i"
-            ><span class="required">*</span> Step {{ i + 1 }}</label
+      <ul formArrayName="steps">
+        <li
+          class="single-step"
+          *ngFor="let st of stepsControl; let i = index"
+          [formGroupName]="i"
+        >
+          <label [for]="'st' + i"
+            ><span class="required">*</span> Step </label
           >
           <textarea
-            [id]="'step' + i"
+            [id]="'st' + i"
             required
             placeholder="Enter the step of preparation"
+            formControlName="step"
           ></textarea>
+          <div class="warn-wrapper">
+            <p class="warn" *ngIf="recipeForm.controls.steps.invalid">
+              Preparation step field is required!
+            </p>
+          </div>
           <button
-            [disabled]="steps.length === 1"
+            type="button"
+            [disabled]="stepsControl.length === 1"
             class="remove mgt1 tooltip-container"
             (click)="removeStep(i)"
           >
@@ -264,22 +300,21 @@
             <fa-icon [icon]="['fas', 'minus']" class="icons"></fa-icon>
             <app-tooltip
               tooltipText="Remove this step"
-              *ngIf="steps.length !== 1"
+              *ngIf="stepsControl.length !== 1"
             ></app-tooltip>
           </button>
         </li>
       </ul>
       <!-- </transition-group> -->
-      <button class="mgt1 add tooltip-container" (click)="addStep()">
+      <button
+        type="button"
+        class="mgt1 add tooltip-container"
+        (click)="addStep()"
+      >
         Add
         <fa-icon [icon]="['fas', 'plus']" class="icons"></fa-icon>
         <app-tooltip tooltipText="Add preparation step"></app-tooltip>
       </button>
-      <div class="warn-wrapper">
-        <!-- <p class="warn">
-            At least one preparation step required!
-          </p> -->
-      </div>
     </div>
   </fieldset>
   <!-- message -->
@@ -292,10 +327,7 @@
     ></app-info-message>
   </div>
   <app-loader [bigLoader]="false" *ngIf="isLoading"></app-loader>
-  <button class="submit-btn hover-effect" type="submit" *ngIf="!uiService.editState">
-    Submit {{ !uiService.editState ? 'Recipe' : 'Changes' }}
+  <button class="submit-btn hover-effect" type="submit">
+    Submit {{ !uiService.editState ? "Recipe" : "Changes" }}
   </button>
-  <!-- <button v-else @click.prevent="validation" class="submit-btn hov-effect" type="submit">
-      Submit Changes
-    </button> -->
 </form>
